--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,10 @@
     "object-curly-spacing": "off",
     "semi": "off",
     "require-jsdoc": "off",
-    "indent": ["error", 2]
+    "indent": ["error", 2],
+    "operator-linebreak": "off",
+    "prefer-const": "off",
+    "no-prototype-builtins":"off"
   },
   "extends": ["eslint:recommended", "google"]
 }
